--- a/config.toml
+++ b/config.toml
@@ -249,7 +249,7 @@ enableGitInfo = false
     link = "//github.com/jananiravi"
 
    [[params.social]]
-    icon = "goodreads-g"
+    icon = "goodreads"
     icon_pack = "fa"
     link = "//goodreads.com/jananiravi"
 
@@ -282,10 +282,10 @@ enableGitInfo = false
   url = "#projects"
   weight = 4
 
- [[menu.main]]
-  name = "Teaching"
-  url = "#teaching"
-  weight = 5
+# [[menu.main]]
+#  name = "Teaching"
+#  url = "#teaching"
+#  weight = 5
 
 [[menu.main]]
   name = "Contact"
